--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+amqp==1.4.8
+anyjson==0.3.3
+appdirs==1.4.3
+billiard==3.3.0.22
 boto==2.46.1
+celery==3.1.19
 Collectfast==0.5.2
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.10.6
 django-appconf==1.0.2
 django-compressor==2.1.1
-django-cors-headers==2.2.0
 django-debug-toolbar==1.7
 django-hide-herokuapp==0.4
 django-ipware==1.1.6
@@ -13,6 +17,8 @@ django-storages==1.5.2
 django-storages-redux==1.3.2
 django-toolbelt==0.0.1
 gunicorn==19.7.0
+kombu==3.0.32
+lockfile==0.12.2
 mock==2.0.0
 newrelic==2.80.1.61
 pbr==4.0.2
